# rd-quant-platform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SPRINT_13_1_RELEASE_NOTES.md  SPRINT_13_4_13_5_RELEASE_NOTES.md  SPRINT_14_1_RELEASE_NOTES.md  SPRINT_14_2_14_5_RELEASE_NOTES.md  fix_sprint9_ruff.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/terminal/: streamlit_app.py
config/: app.yaml  logging.yaml  scanners.yaml  watchlists.yaml
data/: automation_state.sqlite3  execution_journal.sqlite3  research_experiments.sqlite3
docs/: FACTOR_LAB.md  SPRINT_10.md  SPRINT_11.md  SPRINT_12.md  SPRINT_13_2.md  SPRINT_13_3.md  SPRINT_13_4_13_5.md  SPRINT_14_1.md  SPRINT_14_2_14_5.md  architecture.md  automation.md  coding_standards.md  dependency_injection.md  event_bus.md  execution_platform.md  plugin_system.md  replay_and_operations.md  research_lab.md  roadmap.md  scanner_engine.md  sprint8_operations.md  strategy_lab.md
docs/adr/: 0001-ports-and-adapters.md  0002-event-driven-pipeline.md  0003-cumulative-product-versions.md
scripts/: run_terminal.sh
src/rdqp/: app.py  cli.py
tests/integration/: test_dashboard_controller.py  test_simulator_pipeline.py
tests/unit/: test_account_sync.py  test_automation_runner.py  test_automation_scheduler.py  test_backtester.py  test_config.py  test_container.py  test_event_bus.py  test_factor_engine.py  test_factor_lab_correlation.py  test_factor_lab_decay_report.py  test_factor_lab_information_coefficient.py  test_factor_lab_normalization.py  test_factor_lab_quantiles.py  test_factor_lab_regime.py  test_factor_lab_snapshot_adapter.py  test_factor_ranking.py  test_ibkr_paper_guard.py  test_live_risk_controls.py  test_market_session_policy.py  test_models.py  test_notification_router.py  test_observability.py  test_order_lifecycle.py  test_order_manager.py  test_paper_execution_broker.py  test_paper_portfolio.py  test_plugin_registry.py  test_portfolio_intelligence.py  test_reconciliation.py  test_replay.py  test_research_comparison.py  test_research_monte_carlo.py  test_research_monte_carlo_distribution.py  test_research_optimizer.py  test_research_repository.py  test_research_robustness.py  test_research_scorecard.py  (+9 more)
(+146 files in other folders)
